--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- {{ branch }}
+- maim
 
 pool:
-  {{ pool }}
+  vmImage: ubuntu-latest
 
 variables:
   buildConfiguration: 'Release'
